app-backend.yaml
# Copyright 2016 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License


apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sounditafrica-backend
  labels:
    app: sounditafrica
# The sounditafrica backend replica set ensures that at least 3
# instances of the sounditafrica app are running on the cluster.
# For more info about Pods see:
#   https://cloud.google.com/container-engine/docs/pods/
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: sounditafrica
        tier: backend
    spec:
      containers:
      - name: sounditafrica-app
        # Replace [GCLOUD_PROJECT] with your project ID or use `make template`.
        image: gcr.io/sounditafrica-200418/sounditafrica
        # This setting makes nodes pull the docker image every time before
        # starting the pod. This is useful when debugging, but should be turned
        # off in production.
        imagePullPolicy: Always
        # The sounditafrica process listens on port 8080 for web traffic by default.
        ports:
        - name: http-server
          containerPort: 8080
